// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resume Information should return resume information of John Doe 1`] = `
<div
  className="sc-cxNHIi hlhtIV"
>
  <h2
    className="sc-cBoqAE eiBWXX"
  >
    Profil
  </h2>
  <main
    className="sc-oeezt iexnAr"
  >
    <article
      className="sc-eCApnc eUMFVB"
    >
      <h3
        className="sc-ciSkZP gpeMtY"
      >
        Expériences
      </h3>
      <section
        className="sc-bXexck btRMDz"
      >
        <div
          className="sc-cxNHIi jGnmMk"
          role="decoration"
        >
          <div
            className="sc-cxNHIi ioFYxC"
            role="decoration"
          />
        </div>
        <div
          className="sc-cxNHIi cXxdrC"
        >
          <header
            className="sc-efHYUO jkoqbp"
          >
            <p
              className="sc-eKYRIR bbdZXx"
            >
              <time>
                Octobre 2019
              </time>
               - 
              <time>
                Mars 2021
              </time>
            </p>
            <p
              className="sc-eKYRIR codCA-D"
            >
              Osaka International School of Culture and Language
            </p>
          </header>
          <main
            className="sc-oeezt"
          >
            <header
              className="sc-efHYUO jlruWt"
            >
               
              Etudiant en japonais
               
            </header>
            <p
              className="sc-eKYRIR gzqqNI"
            >
              Coupure d'un an et demi pour apprendre sur la langue et la culture japonaise
            </p>
          </main>
        </div>
      </section>
      <section
        className="sc-bXexck btRMDz"
      >
        <div
          className="sc-cxNHIi jGnmMk"
          role="decoration"
        >
          <div
            className="sc-cxNHIi ioFYxC"
            role="decoration"
          />
        </div>
        <div
          className="sc-cxNHIi cXxdrC"
        >
          <header
            className="sc-efHYUO jkoqbp"
          >
            <p
              className="sc-eKYRIR bbdZXx"
            >
              <time>
                Novembre 2018
              </time>
               - 
              <time>
                Septembre 2019
              </time>
            </p>
            <p
              className="sc-eKYRIR codCA-D"
            >
              Effy
            </p>
          </header>
          <main
            className="sc-oeezt"
          >
            <header
              className="sc-efHYUO jlruWt"
            >
               
              Lead Développeur Front-End
               
            </header>
            <p
              className="sc-eKYRIR gzqqNI"
            >
              Lead Développeur Front dans une équipe de 4 développeurs, nous avons architecturé et développé diverses interfaces en collaboration avec l'équipe produit.
            </p>
          </main>
        </div>
      </section>
    </article>
    <div
      className="sc-cxNHIi fFMmbg"
    >
      <article
        className="sc-eCApnc crRaXW"
      >
        <h3
          className="sc-ciSkZP gpeMtY"
        >
          Autres librairies JS
        </h3>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Jest
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              90
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi hOauWK"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              RxJS
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              75
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi jA-dHKV"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Cucumber
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              75
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi jA-dHKV"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Cypress
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              75
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi jA-dHKV"
            />
          </div>
        </div>
      </article>
      <article
        className="sc-eCApnc crRaXW"
      >
        <h3
          className="sc-ciSkZP gpeMtY"
        >
          Versionning, Intégration continue
        </h3>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Git
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              95
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi fnjsyb"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Circle CI
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              70
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi jIRNo"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Github Action
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              50
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi kxSsyO"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Jenkins
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              20
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi gvGppZ"
            />
          </div>
        </div>
      </article>
      <div
        className="sc-cxNHIi cRiTtJ"
      >
        <a
          className="sc-bdnxRM fpHZtF"
          href="https://drive.google.com/file/d/1pJKHQ54QYnRS4p8uWf2LaOsALSNy3jFs/view?usp=sharing"
          target="_blank"
        >
          Plus de détails sur mon CV
        </a>
      </div>
    </div>
  </main>
</div>
`;

exports[`Resume Information should return resume information of Paul Couthouis 1`] = `
<div
  className="sc-cxNHIi hlhtIV"
>
  <h2
    className="sc-cBoqAE eiBWXX"
  >
    Profil
  </h2>
  <main
    className="sc-oeezt iexnAr"
  >
    <article
      className="sc-eCApnc eUMFVB"
    >
      <h3
        className="sc-ciSkZP gpeMtY"
      >
        Expériences
      </h3>
      <section
        className="sc-bXexck btRMDz"
      >
        <div
          className="sc-cxNHIi jGnmMk"
          role="decoration"
        >
          <div
            className="sc-cxNHIi ioFYxC"
            role="decoration"
          />
        </div>
        <div
          className="sc-cxNHIi cXxdrC"
        >
          <header
            className="sc-efHYUO jkoqbp"
          >
            <p
              className="sc-eKYRIR bbdZXx"
            >
              <time>
                Avril 2021
              </time>
               - 
              <time>
                Actuel
              </time>
            </p>
            <p
              className="sc-eKYRIR codCA-D"
            >
              BaseConnect
            </p>
          </header>
          <main
            className="sc-oeezt"
          >
            <header
              className="sc-efHYUO jlruWt"
            >
               
              Développeur Front-End
               
            </header>
            <p
              className="sc-eKYRIR gzqqNI"
            >
              Dans un environnement 100% japonais, je suis intégré à l'équipe front-end et je développe de nouvelles features pour l'application principale.
            </p>
          </main>
        </div>
      </section>
      <section
        className="sc-bXexck btRMDz"
      >
        <div
          className="sc-cxNHIi jGnmMk"
          role="decoration"
        >
          <div
            className="sc-cxNHIi ioFYxC"
            role="decoration"
          />
        </div>
        <div
          className="sc-cxNHIi cXxdrC"
        >
          <header
            className="sc-efHYUO jkoqbp"
          >
            <p
              className="sc-eKYRIR bbdZXx"
            >
              <time>
                Octobre 2019
              </time>
               - 
              <time>
                Mars 2021
              </time>
            </p>
            <p
              className="sc-eKYRIR codCA-D"
            >
              Osaka International School of Culture and Language
            </p>
          </header>
          <main
            className="sc-oeezt"
          >
            <header
              className="sc-efHYUO jlruWt"
            >
               
              Etudiant en japonais
               
            </header>
            <p
              className="sc-eKYRIR gzqqNI"
            >
              Coupure d'un an et demi pour apprendre sur la langue et la culture japonaise
            </p>
          </main>
        </div>
      </section>
    </article>
    <div
      className="sc-cxNHIi fFMmbg"
    >
      <article
        className="sc-eCApnc crRaXW"
      >
        <h3
          className="sc-ciSkZP gpeMtY"
        >
          Langage de programmations
        </h3>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              HTML / (S)CSS
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              95
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi fnjsyb"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Javascript
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              90
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi hOauWK"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Typescript
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              80
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi cgzjxP"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              PHP
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              50
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi kxSsyO"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Java
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              20
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi gvGppZ"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              C#
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              20
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi gvGppZ"
            />
          </div>
        </div>
      </article>
      <article
        className="sc-eCApnc crRaXW"
      >
        <h3
          className="sc-ciSkZP gpeMtY"
        >
          Framework JS
        </h3>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Angular
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              90
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi hOauWK"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              React (+ Next)
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              70
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi jIRNo"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Vue
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              50
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi kxSsyO"
            />
          </div>
        </div>
        <div
          className="sc-cxNHIi kMVWSh"
        >
          <div
            className="sc-cxNHIi egrhlE"
          >
            <p
              className="sc-eKYRIR hmQIr"
            >
              Svelte
            </p>
            <p
              className="sc-eKYRIR kXizaC"
            >
              50
              %
            </p>
          </div>
          <div
            className="sc-cxNHIi geVump"
          >
            <div
              className="sc-cxNHIi kxSsyO"
            />
          </div>
        </div>
      </article>
      <div
        className="sc-cxNHIi cRiTtJ"
      >
        <a
          className="sc-bdnxRM fpHZtF"
          href="https://drive.google.com/file/d/1pJKHQ54QYnRS4p8uWf2LaOsALSNy3jFs/view?usp=sharing"
          target="_blank"
        >
          Plus de détails sur mon CV
        </a>
      </div>
    </div>
  </main>
</div>
`;
